--- a/index.html
+++ b/index.html
@@ -157,10 +157,9 @@
             <div class="w-container">
                 <div class="form-wrapper w-form">
                     <form name="email-form" data-name="Email Form" id="email-form" method="get" data-wf-page-id="6626ea7d0441de2330b110a1" data-wf-element-id="10e0b33f-b7bf-6f7e-7b31-afaeb14012c0">
-                        <input class="field darker w-input" maxlength="256" name="name" data-name="Name" placeholder="Name" type="text" id="field" required=""/>
+                        <input class="field darker w-input" maxlength="256" name="name" data-name="Name" placeholder="Nome" type="text" id="field" required=""/>
                         <input class="field w-input" maxlength="256" name="email" data-name="Email" placeholder="Email" type="email" id="field" required=""/>
-                        <input class="field darker w-input" maxlength="256" name="budget" data-name="Budget" placeholder="Budget" type="text" id="field" required=""/>
-                        <textarea placeholder="Describe your project..." maxlength="5000" required="" name="comments" data-name="Comments" id="field" class="field large w-input"></textarea>
+                        <textarea placeholder="Escreva sua mensagem..." maxlength="5000" required="" name="comments" data-name="Comments" id="field" class="field large w-input"></textarea>
                         <input type="submit" data-wait="Please wait..." class="button form w-button" value="Send Message"/>
                     </form>
                     <div class="success-message w-form-done">
