--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <input class="field darker w-input" maxlength="256" name="name" data-name="Name" placeholder="Nome" type="text" id="field" required=""/>
                         <input class="field w-input" maxlength="256" name="email" data-name="Email" placeholder="Email" type="email" id="field" required=""/>
                         <textarea placeholder="Escreva sua mensagem..." maxlength="5000" required="" name="comments" data-name="Comments" id="field" class="field large w-input"></textarea>
-                        <input type="submit" data-wait="Please wait..." class="button form w-button" value="Send Message"/>
+                        <input type="submit" data-wait="Please wait..." class="button form w-button" value="Enviar"/>
                     </form>
                     <div class="success-message w-form-done">
                         <h1>Obrigado!</h1>
